--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
-fastapi==0.109.2
-uvicorn==0.27.1
-python-dotenv==1.0.0
-slack-sdk==3.26.1
-langchain-groq==0.0.4
-langchain-core==0.1.18
-langchain-google-genai==0.0.6
-faiss-cpu==1.7.4
-jinja2==3.1.3
-python-multipart==0.0.6
-sqlalchemy==2.0.27
-pydantic==2.6.1
-numpy==1.24.3
+fastapi
+jinja2
+python-dotenv
+slack-sdk
+logging
+hmac
+hashlib
+datetime
+langchain-groq
+langchain-core
+langchain-google-genai
+langchain-community
+sqlalchemy
+numpy
+uvicorn
