--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ colorama==0.4.6
 dataclasses-json==0.6.7
 distro==1.9.0
 faiss-cpu==1.10.0
-fastapi==0.115.8
+fastapi==0.104.1
 filetype==1.2.0
 frozenlist==1.5.0
 google-ai-generativelanguage==0.6.15
@@ -24,7 +24,7 @@ google-auth-httplib2==0.2.0
 google-generativeai==0.8.4
 googleapis-common-protos==1.67.0
 greenlet==3.1.1
-groq==0.18.0
+groq==0.4.2
 grpcio==1.70.0
 grpcio-status==1.70.0
 gunicorn==23.0.0
@@ -50,7 +50,7 @@ MarkupSafe==3.0.2
 marshmallow==3.26.1
 multidict==6.1.0
 mypy-extensions==1.0.0
-numpy==2.2.3
+numpy==1.26.2
 openai==1.66.5
 orjson==3.10.15
 packaging==24.2
@@ -63,24 +63,31 @@ pydantic==2.10.6
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
 pyparsing==3.2.1
-python-dotenv==1.0.1
-python-multipart==0.0.20
+python-dotenv==1.0.0
+python-multipart==0.0.6
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
 rsa==4.9
-slack_sdk==3.34.0
+slack-sdk==3.26.1
 sniffio==1.3.1
 SQLAlchemy==2.0.38
 starlette==0.45.3
-tenacity==9.0.0
+tenacity==8.2.3
 tiktoken==0.9.0
 tqdm==4.67.1
 typing-inspect==0.9.0
 typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.3.0
-uvicorn==0.34.0
+uvicorn==0.24.0
 yarl==1.18.3
 zstandard==0.23.0
+pandas==2.1.3
+scikit-learn==1.3.2
+sqlalchemy[asyncio]==2.0.23
+circuitbreaker==1.4.0
+psutil==5.9.6
+redis==5.0.1
+prometheus-client==0.19.0
