--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Environment variables
-faiss_for_pinecone/
-faiss_index_for_pinecone/
+faiss_for_pinecone.json
+faiss_index_for_pinecone.json
 
 # Python
 __pycache__/
